--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -170,7 +170,6 @@
 	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
 	"arenella-home-title": "Welcome to Arenella-ICT",
 	"arenella-infobox-contact": "Contact",
-	"arenella-infobox-person": "person",
 	"arenella-listing-btn-back": "Back",
 	"arenella-listing-btn-create": "Create Alert",
 	"arenella-listing-btn-publicity": "Publicity",
@@ -249,7 +248,7 @@
 	"arenella-new-candidate-first-name": "First name",
 	"arenella-new-candidate-firstname": "First name",
 	"arenella-new-candidate-french": "French",
-	"arenella-new-candidate-from": "To",
+	"arenella-new-candidate-from": "From",
 	"arenella-new-candidate-fully-remote": "Fully Remote",
 	"arenella-new-candidate-function-group": "Function Group",
 	"arenella-new-candidate-gbp": "GBP",
@@ -478,6 +477,7 @@
 	"arenella-recruiter-prof-box-contact-desc2": "You can view a copy of your message and any replies in your inbox",
 	"arenella-recruiter-prof-box-contact-failed": "Failed to Send Message",
 	"arenella-recruiter-prof-box-contact-title": "Send Message",
+	"arenella-recruiter-prof-box-contact-titleititle": "Title",
 	"arenella-recruiter-prof-btn-back": "Back",
 	"arenella-recruiter-prof-btn-create": "Create Profile",
 	"arenella-recruiter-prof-btn-edit": "Edit Profile",
@@ -576,6 +576,7 @@
 	"arenella-suggestions-box-alert-btn-save": "Save",
 	"arenella-suggestions-box-alert-failure": "Unfortunately it was not possible to create your Candidate Search Alert at this time.",
 	"arenella-suggestions-box-alert-hdr": "Create Email Alert",
+	"arenella-suggestions-box-alert-name": "Alert Name",
 	"arenella-suggestions-box-alert-success-1": "Your Candidate Search Alert was created successfully. You will now receive alerts when matching candidates are uploaded.",
 	"arenella-suggestions-box-alert-success-2": "You can manage alerts in the 'Manage Search Alerts' screen.",
 	"arenella-suggestions-box-alert-text": "Please add required filters before creating your alert",
@@ -613,6 +614,7 @@
 	"arenella-suggestions-profile-box-contact-title": "Title",
 	"arenella-suggestions-profile-box-delete-hdr": "Confirm Delete",
 	"arenella-suggestions-profile-box-delete-msg": "This profile will be deleted and it will no longer be possible to access the associated data",
+	"arenella-suggestions-profile-box-delete-msg-confirm": "Confirm",
 	"arenella-suggestions-profile-box-msg-updated": "Updated",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Save",
 	"arenella-suggestions-profile-box-notes-hdr": "Notes for Candidate",
@@ -622,7 +624,8 @@
 	"arenella-suggestions-profile-btn-edit": "Edit",
 	"arenella-suggestions-profile-btn-notes": "Notes",
 	"arenella-suggestions-profile-btn-save": "Save Candidate",
-	"arenella-suggestions-profile-btn-unsave": "Un-save Candidate",
+	"arenella-suggestions-profile-btn-unsave": "Unsave",
+	"arenella-suggestions-profile-btn-view-cv": "Display CV",
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Language Accuracy",
 	"arenella-suggestions-profile-candidate-matching-skills": "Matching Skills",
 	"arenella-suggestions-profile-candidate-missing-skills": "Missing Skills",
@@ -636,5 +639,139 @@
 	"arenella-suggestions-profile-introduction": "Introduction",
 	"arenella-suggestions-saved-candidate-btn-back": "Back",
 	"arenella-suggestions-skills": "Skills",
-	"arenella-suggestions-to": "TO"
+	"arenella-suggestions-to": "TO",
+	"create-candidate--profile-image": "There was an issue with the profile image",
+	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
+	"create-candidate-failure": "Unable to add Candidate",
+	"create-candidate-success": "Your details have been successfully uploaded. They will now be reviewed and added to the system",
+	"failure": "Failure",
+	"func-ba": "Business Analyst",
+	"func-csharp-dev": "C# Developer",
+	"func-data-scientist": "Data Scientist",
+	"func-it-recruiter": "IT Recruiter",
+	"func-it-security": "IT Security",
+	"func-java-dev": "Java Developer",
+	"func-network-admin": "Network Administrator",
+	"func-pmo": "Project Manager",
+	"func-scrum-master": "Scrum Master",
+	"func-software-architect": "Software Architect",
+	"func-software-dev": "Software Developer",
+	"func-support": "IT Support",
+	"func-support-sdet": "SDET",
+	"func-tester": "Test Analyst",
+	"func-uiux": "UI/UX",
+	"func-web-dev": "Web Developer",
+	"info-item-contract-rate": "Contract Rate",
+	"info-item-days-onsite-fully-remote": "Fully Remote",
+	"info-item-title-availability": "Availability",
+	"info-item-title-available-from": "Available From",
+	"info-item-title-city": "City",
+	"info-item-title-contract": "Contract",
+	"info-item-title-contract-type": "Contract Type",
+	"info-item-title-country": "Country",
+	"info-item-title-languages": "Languages",
+	"info-item-title-location": "Location",
+	"info-item-title-location-per": " Per ",
+	"info-item-title-max-days-on-site": "Max Days On Site",
+	"info-item-title-per": " per ",
+	"info-item-title-perm-rate": "Perm Rate",
+	"info-item-title-permanent": "Perm",
+	"info-item-title-rate": "Rate: ",
+	"info-item-title-to": " to ",
+	"info-item-title-years-experience": "Years Experience",
+	"login-user-invalid-login": "Invalid Login attempt",
+	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
+	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
+	"mp-left-failure-failed-to-persits-new-open-position": "Failed to persist new Open Position",
+	"mp-left-mnu-city": "City",
+	"mp-left-mnu-company": "Company",
+	"mp-left-mnu-condistons": "Conditions",
+	"mp-left-mnu-contract-type": "Contract Type",
+	"mp-left-mnu-country": "Country",
+	"mp-left-mnu-location": "Location",
+	"mp-left-mnu-name": "Name",
+	"mp-left-mnu-rate-salsary": "Rate/Salary",
+	"mp-left-mnu-renumerationo": "Renumeration",
+	"mp-left-mnu-requested-by": "Requested By",
+	"mp-left-mnu-requested-skills": "Skills",
+	"new-candidate-basic": "Basic",
+	"new-candidate-failure": "Unable to add Candidate",
+	"new-candidate-failure-title": "Failure",
+	"new-candidate-no": "No",
+	"new-candidate-success": "Candidate Saved",
+	"new-candidate-success-title": "Success",
+	"new-candidate-yes": "Yes",
+	"rec-prof-country-belgium": "Belgium",
+	"rec-prof-country-europe": "Europe",
+	"rec-prof-country-ireland": "Ireland",
+	"rec-prof-country-netherlands": "Netherlands",
+	"rec-prof-country-uk": "UK",
+	"rec-prof-country-world": "World",
+	"rec-prof-func-architect": "Architect",
+	"rec-prof-func-busines-analyst": "BA",
+	"rec-prof-func-business-intelligence": "Business Intelligence",
+	"rec-prof-func-cloud": "Cloud",
+	"rec-prof-func-cyber-security": "Cyber Security",
+	"rec-prof-func-devops": "DevOps",
+	"rec-prof-func-dotnet": ".Net",
+	"rec-prof-func-java": "Java",
+	"rec-prof-func-networks": "Networks",
+	"rec-prof-func-project-management": "Project Management",
+	"rec-prof-func-rec2rec": "Rec2Rec",
+	"rec-prof-func-support-helpdesk": "Support/Helpdesk",
+	"rec-prof-func-testing": "QA Testing",
+	"rec-prof-func-ui-ux": "UI/UX",
+	"rec-prof-func-web": "Web",
+	"rec-prof-info-item-company": "Company",
+	"rec-prof-info-item-type": "Type",
+	"rec-prof-info-item-years-exp": "Years Experience",
+	"rec-prof-lang-dutch": "Dutch",
+	"rec-prof-lang-english": "English",
+	"rec-prof-lang-french": "French",
+	"rec-prof-sector-automitive": "Automotive",
+	"rec-prof-sector-cyber-intelligence": "Cyber Intelligence",
+	"rec-prof-sector-eu-institutions": "EU Institutions",
+	"rec-prof-sector-fintech": "Fintech",
+	"rec-prof-sector-gaming": "Gaming",
+	"rec-prof-sector-government": "Government",
+	"rec-prof-sector-logistice": "Logistics",
+	"rec-prof-sector-police-and-defence": "Police and Defence",
+	"rec-prof-type-freelance-contract": "Freelance/Contract",
+	"rec-prof-type-permanent-payroll": "Permanent/Payroll",
+	"register-recruiter-failure": "Unfortunately there was a problem. Please email kparkings@gmail.com directly for your account",
+	"register-recruiter-failure-title": "Failure",
+	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
+	"register-recruiter-success-title": "Success",
+	"static-contract-type-both": "Contract/Perm",
+	"static-contract-type-contract": "Contract",
+	"static-contract-type-perm": "Perm",
+	"static-country-be": "Belgium",
+	"static-country-eu": "EU",
+	"static-country-ir": "Ireland",
+	"static-country-nl": "The Netherlands",
+	"static-country-uk": "United Kingdon",
+	"static-country-world": "World",
+	"static-func-architecture": "Architecture",
+	"static-func-ba": "BA",
+	"static-func-bi": "Cloud",
+	"static-func-cloud": "Cloud",
+	"static-func-devops": "Devops",
+	"static-func-dotnet": ".Net",
+	"static-func-java": "Java",
+	"static-func-networkd": "Networks",
+	"static-func-pmo": "PMO",
+	"static-func-recruitment": "Recruitment",
+	"static-func-security": "IT Security",
+	"static-func-supporrty": "IT Support",
+	"static-func-testing": "Testing",
+	"static-func-uiux": "UI/UX",
+	"static-func-web": "Web",
+	"static-lang-dutch": "Dutch",
+	"static-lang-english": "English",
+	"static-lang-french": "French",
+	"success": "Success",
+	"suggestions-lang-dutch": "Dutch",
+	"suggestions-lang-english": "English",
+	"suggestions-lang-french": "French",
+	"suggestions-lang-na": "NA"
 }
