--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -121,7 +121,7 @@
 	"arenella-email-attachments": "Archivos adjuntos",
 	"arenella-email-btn-reply": "Responder",
 	"arenella-email-btn-undread": "Marcar no leido",
-	"arenella-email-btn-unread": "Marcar como no leido",
+	"arenella-email-btn-unread": "Marcar no leido",
 	"arenella-email-from": "De",
 	"arenella-email-msg-reply-failed": "Lamentablemente no fue posible enviar la respuesta en este momento.",
 	"arenella-email-msg-reply-sent": "La respuesta ha sido enviada.",
@@ -170,7 +170,6 @@
 	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
 	"arenella-home-title": "Welcome to Arenella-ICT",
 	"arenella-infobox-contact": "Contacto",
-	"arenella-infobox-person": "persona",
 	"arenella-listing-btn-back": "Regreso",
 	"arenella-listing-btn-create": "Crear alerta",
 	"arenella-listing-btn-publicity": "Publicidad",
@@ -230,7 +229,7 @@
 	"arenella-new-candidate-3": "3",
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
-	"arenella-new-candidate-available-from": "Disponible de",
+	"arenella-new-candidate-available-from": "Disponible",
 	"arenella-new-candidate-belgium": "Bélgica",
 	"arenella-new-candidate-btn-add": "Agregar",
 	"arenella-new-candidate-btn-back": "Regresa",
@@ -249,7 +248,7 @@
 	"arenella-new-candidate-first-name": "Nombre",
 	"arenella-new-candidate-firstname": "Nombre",
 	"arenella-new-candidate-french": "Francés",
-	"arenella-new-candidate-from": "A",
+	"arenella-new-candidate-from": "Desde",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
 	"arenella-new-candidate-function-group": "Grupo de funciones",
 	"arenella-new-candidate-gbp": "GBP",
@@ -278,7 +277,7 @@
 	"arenella-newsfeed-view-profile": "Ver perfil",
 	"arenella-recruiter-account-btn-cancel": "Cancelar",
 	"arenella-recruiter-account-btn-edit": "Editar detalles",
-	"arenella-recruiter-account-btn-save": "Guardar cambios",
+	"arenella-recruiter-account-btn-save": "Guardar ",
 	"arenella-recruiter-account-company-name": "Nombre de empresa",
 	"arenella-recruiter-account-detail-invoice-warn": "Advertencia",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Hay una factura pendiente. El acceso al sistema queda suspendido temporalmente hasta que se haya pagado la factura.",
@@ -353,7 +352,7 @@
 	"arenella-recruiter-listing-btn-add-job": "Agregar trabajo",
 	"arenella-recruiter-listing-btn-back": "Regresa",
 	"arenella-recruiter-listing-btn-confirm": "Confirmar",
-	"arenella-recruiter-listing-btn-create-from-spec": "Crear a partir de especificaciones",
+	"arenella-recruiter-listing-btn-create-from-spec": "Crear de espec",
 	"arenella-recruiter-listing-btn-delete": "Borrar",
 	"arenella-recruiter-listing-btn-edit": "Editar",
 	"arenella-recruiter-listing-btn-publicity": "Publicidad",
@@ -478,6 +477,7 @@
 	"arenella-recruiter-prof-box-contact-desc2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada",
 	"arenella-recruiter-prof-box-contact-failed": "No se pudo enviar el mensaje",
 	"arenella-recruiter-prof-box-contact-title": "Enviar mensaje",
+	"arenella-recruiter-prof-box-contact-titleititle": "Título",
 	"arenella-recruiter-prof-btn-back": "Regresa",
 	"arenella-recruiter-prof-btn-create": "Crear perfil",
 	"arenella-recruiter-prof-btn-edit": "Editar perfil",
@@ -576,6 +576,7 @@
 	"arenella-suggestions-box-alert-btn-save": "Guarda",
 	"arenella-suggestions-box-alert-failure": "Lamentablemente no fue posible enviar la respuesta en este momento.",
 	"arenella-suggestions-box-alert-hdr": "Crear alerta",
+	"arenella-suggestions-box-alert-name": "Nombre de alerta",
 	"arenella-suggestions-box-alert-success-1": "Su alerta de búsqueda de candidatos se creó correctamente. Ahora recibirá alertas cuando se carguen candidatos coincidentes.",
 	"arenella-suggestions-box-alert-success-2": "Puede administrar alertas en la pantalla 'Administrar alertas de búsqueda'.",
 	"arenella-suggestions-box-alert-text": "Agregue los filtros requeridos antes de crear su alerta",
@@ -591,7 +592,7 @@
 	"arenella-suggestions-box-spec-text": "Pegar texto",
 	"arenella-suggestions-btn-copy": "Copiar",
 	"arenella-suggestions-btn-create-alert": "Crear alerta",
-	"arenella-suggestions-btn-filter-by-spec": "Filtrar por especificación de trabajo",
+	"arenella-suggestions-btn-filter-by-spec": "Filtrar por espec",
 	"arenella-suggestions-btn-manage-alert": "Administrar alertas",
 	"arenella-suggestions-btn-my-candidates": "Mis candidatos",
 	"arenella-suggestions-btn-reset": "Reiniciar",
@@ -613,6 +614,7 @@
 	"arenella-suggestions-profile-box-contact-title": "Título",
 	"arenella-suggestions-profile-box-delete-hdr": "Confirmar eliminación",
 	"arenella-suggestions-profile-box-delete-msg": "Este perfil será eliminado y ya no será posible acceder a los datos asociados",
+	"arenella-suggestions-profile-box-delete-msg-confirm": "Confirmar",
 	"arenella-suggestions-profile-box-msg-updated": "Actualizar",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Guarda",
 	"arenella-suggestions-profile-box-notes-hdr": "Notas para el candidato",
@@ -621,8 +623,9 @@
 	"arenella-suggestions-profile-btn-download-cv": "Descargar CV",
 	"arenella-suggestions-profile-btn-edit": "Editar",
 	"arenella-suggestions-profile-btn-notes": "Notas",
-	"arenella-suggestions-profile-btn-save": "Guardar candidato",
-	"arenella-suggestions-profile-btn-unsave": "Candidato no guardar",
+	"arenella-suggestions-profile-btn-save": "Guardar",
+	"arenella-suggestions-profile-btn-unsave": "Unsave",
+	"arenella-suggestions-profile-btn-view-cv": "Mostrar CV",
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Precisión del lenguaje",
 	"arenella-suggestions-profile-candidate-matching-skills": "Habilidades de combinación",
 	"arenella-suggestions-profile-candidate-missing-skills": "Habilidades faltantes",
@@ -636,5 +639,139 @@
 	"arenella-suggestions-profile-introduction": "Introducción",
 	"arenella-suggestions-saved-candidate-btn-back": "Regreso",
 	"arenella-suggestions-skills": "Habilidades",
-	"arenella-suggestions-to": "A"
+	"arenella-suggestions-to": "A",
+	"create-candidate--profile-image": "Hubo un problema con la imagen de perfil.",
+	"create-candidate-cv-format": "El CV debe ser Word o PDF y tener menos de 1MB.",
+	"create-candidate-failure": "Incapaz de agregar candidato",
+	"create-candidate-success": "Sus datos se han cargado correctamente. Ahora serán revisados ​​y agregados al sistema.",
+	"failure": "Falla",
+	"func-ba": "Analista de negocios",
+	"func-csharp-dev": "Desarrollador C#",
+	"func-data-scientist": "Científico de datos",
+	"func-it-recruiter": "Reclutador de TI",
+	"func-it-security": "Seguridad informatica",
+	"func-java-dev": "Desarrollador Java",
+	"func-network-admin": "Administrador de red",
+	"func-pmo": "Gerente de proyecto",
+	"func-scrum-master": "Scrum Master",
+	"func-software-architect": "Arquitecto de software",
+	"func-software-dev": "Desarrollador de software",
+	"func-support": "Soporte de TI",
+	"func-support-sdet": "SDET",
+	"func-tester": "Analista de Test",
+	"func-uiux": "UI/UX",
+	"func-web-dev": "Desarrollador web",
+	"info-item-contract-rate": "Tasa de contrato",
+	"info-item-days-onsite-fully-remote": "Totalmente remoto",
+	"info-item-title-availability": "Disponibilidad",
+	"info-item-title-available-from": "Disponible",
+	"info-item-title-city": "Ciudad",
+	"info-item-title-contract": "Contrato",
+	"info-item-title-contract-type": "Tipo de contrato",
+	"info-item-title-country": "País",
+	"info-item-title-languages": "Idiomas",
+	"info-item-title-location": "Lugar",
+	"info-item-title-location-per": " a",
+	"info-item-title-max-days-on-site": "Días máximos en el sitio",
+	"info-item-title-per": " a",
+	"info-item-title-perm-rate": "Tasa de perm",
+	"info-item-title-permanent": "Perm",
+	"info-item-title-rate": "Tarifa: ",
+	"info-item-title-to": " a ",
+	"info-item-title-years-experience": "Años de experiencia",
+	"login-user-invalid-login": "Intento de inicio de sesión no válido",
+	"login-user-unable-to-send-email": "No se puede enviar el correo electronico. Posiblemente correo electrónico desconocido.",
+	"mp-failure-failed-to-update-open-position": "No se pudo actualizar la posición abierta",
+	"mp-left-failure-failed-to-persits-new-open-position": "No se pudo conservar la nueva posición abierta",
+	"mp-left-mnu-city": "Ciudad",
+	"mp-left-mnu-company": "Empresa",
+	"mp-left-mnu-condistons": "Condiciones",
+	"mp-left-mnu-contract-type": "Tipo de contrato",
+	"mp-left-mnu-country": "País",
+	"mp-left-mnu-location": "Ubicación",
+	"mp-left-mnu-name": "Nombre",
+	"mp-left-mnu-rate-salsary": "Tarifa/Salario",
+	"mp-left-mnu-renumerationo": "Remuneración",
+	"mp-left-mnu-requested-by": "Solicitado por",
+	"mp-left-mnu-requested-skills": "Habilidades",
+	"new-candidate-basic": "Básico",
+	"new-candidate-failure": "Incapaz de agregar candidato",
+	"new-candidate-failure-title": "Falla",
+	"new-candidate-no": "No",
+	"new-candidate-success": "Candidato guardado",
+	"new-candidate-success-title": "Éxito",
+	"new-candidate-yes": "Sí",
+	"rec-prof-country-belgium": "Bélgica",
+	"rec-prof-country-europe": "Europa",
+	"rec-prof-country-ireland": "Irlanda",
+	"rec-prof-country-netherlands": "Países Bajos",
+	"rec-prof-country-uk": "Reino Unido",
+	"rec-prof-country-world": "Mundo",
+	"rec-prof-func-architect": "Arquitecto",
+	"rec-prof-func-busines-analyst": "BA",
+	"rec-prof-func-business-intelligence": "Inteligencia de negocios",
+	"rec-prof-func-cloud": "Cloud",
+	"rec-prof-func-cyber-security": "La seguridad cibernética",
+	"rec-prof-func-devops": "DevOps",
+	"rec-prof-func-dotnet": ".Net",
+	"rec-prof-func-java": "Java",
+	"rec-prof-func-networks": "Redes",
+	"rec-prof-func-project-management": "Gestión de proyectos",
+	"rec-prof-func-rec2rec": "Rec2Rec",
+	"rec-prof-func-support-helpdesk": "Soporte/Helpdesk",
+	"rec-prof-func-testing": "Pruebas de control de calidad",
+	"rec-prof-func-ui-ux": "UI/UX",
+	"rec-prof-func-web": "Web",
+	"rec-prof-info-item-company": "Empresa",
+	"rec-prof-info-item-type": "Tipo",
+	"rec-prof-info-item-years-exp": "Años de experiencia",
+	"rec-prof-lang-dutch": "Holandés",
+	"rec-prof-lang-english": "Inglés",
+	"rec-prof-lang-french": "Francés",
+	"rec-prof-sector-automitive": "Automotor",
+	"rec-prof-sector-cyber-intelligence": "Ciberinteligencia",
+	"rec-prof-sector-eu-institutions": "Instituciones de la UE",
+	"rec-prof-sector-fintech": "Fintech",
+	"rec-prof-sector-gaming": "Juego de azar",
+	"rec-prof-sector-government": "Gobierno",
+	"rec-prof-sector-logistice": "Logística",
+	"rec-prof-sector-police-and-defence": "Policía y defensa",
+	"rec-prof-type-freelance-contract": "Autónomo/Contrato",
+	"rec-prof-type-permanent-payroll": "Permanente/Nómina",
+	"register-recruiter-failure": "Lamentablemente hubo un problema. Envíe un correo electrónico a kparkings@gmail.com directamente para su cuenta.",
+	"register-recruiter-failure-title": "Falla",
+	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptado, se enviará un correo electrónico con sus datos de inicio de sesión.",
+	"register-recruiter-success-title": "Éxito",
+	"static-contract-type-both": "Contrato/Perm ",
+	"static-contract-type-contract": "Contrato",
+	"static-contract-type-perm": "Perm",
+	"static-country-be": "Bélgica",
+	"static-country-eu": "UE",
+	"static-country-ir": "Irland",
+	"static-country-nl": "Los países bajos",
+	"static-country-uk": "Reino Unido",
+	"static-country-world": "Mundo",
+	"static-func-architecture": "Arquitectura",
+	"static-func-ba": "BA",
+	"static-func-bi": "Cloud",
+	"static-func-cloud": "Cloud",
+	"static-func-devops": "Devops",
+	"static-func-dotnet": ".Net",
+	"static-func-java": "Java",
+	"static-func-networkd": "Redes",
+	"static-func-pmo": "PMO",
+	"static-func-recruitment": "Reclutamiento",
+	"static-func-security": "Seguridad informatica",
+	"static-func-supporrty": "Soporte de TI",
+	"static-func-testing": "Testing",
+	"static-func-uiux": "UI/UX",
+	"static-func-web": "Web",
+	"static-lang-dutch": "Holandés",
+	"static-lang-english": "Inglés",
+	"static-lang-french": "Francés",
+	"success": "Éxito",
+	"suggestions-lang-dutch": "Holandés",
+	"suggestions-lang-english": "Inglés",
+	"suggestions-lang-french": "Francés",
+	"suggestions-lang-na": "NA"
 }
