--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -121,7 +121,7 @@
 	"arenella-email-attachments": "Pièces jointes",
 	"arenella-email-btn-reply": "Répondre",
 	"arenella-email-btn-undread": "Marquer non lu",
-	"arenella-email-btn-unread": "Marquer comme non lu",
+	"arenella-email-btn-unread": "Marquer non lu",
 	"arenella-email-from": "De",
 	"arenella-email-msg-reply-failed": "Malheureusement, il n'a pas été possible d'envoyer la réponse pour le moment.",
 	"arenella-email-msg-reply-sent": "La réponse a été envoyée.",
@@ -170,7 +170,6 @@
 	"arenella-home-sub-title": "Base de données de CV des candidats en informatique - Site d'emploi informatique - IT Marketplace",
 	"arenella-home-title": "Bienvenue à Arenella-ICT",
 	"arenella-infobox-contact": "Contact",
-	"arenella-infobox-person": "La personne",
 	"arenella-listing-btn-back": "retourner",
 	"arenella-listing-btn-create": "Créer une alerte",
 	"arenella-listing-btn-publicity": "Publicité",
@@ -230,7 +229,7 @@
 	"arenella-new-candidate-3": "3",
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
-	"arenella-new-candidate-available-from": "Disponible depuis",
+	"arenella-new-candidate-available-from": "Disponible",
 	"arenella-new-candidate-belgium": "Belgique",
 	"arenella-new-candidate-btn-add": "Ajouter",
 	"arenella-new-candidate-btn-back": "Retourner",
@@ -249,7 +248,7 @@
 	"arenella-new-candidate-first-name": "Prénom",
 	"arenella-new-candidate-firstname": "Prénom",
 	"arenella-new-candidate-french": "Français",
-	"arenella-new-candidate-from": "À",
+	"arenella-new-candidate-from": "De",
 	"arenella-new-candidate-fully-remote": "Entièrement distant",
 	"arenella-new-candidate-function-group": "Groupe de fonctions",
 	"arenella-new-candidate-gbp": "GBP",
@@ -278,7 +277,7 @@
 	"arenella-newsfeed-view-profile": "Voir le profil",
 	"arenella-recruiter-account-btn-cancel": "Annuler",
 	"arenella-recruiter-account-btn-edit": "Modifier les détails",
-	"arenella-recruiter-account-btn-save": "Sauvegarder les modifications",
+	"arenella-recruiter-account-btn-save": "Sauvegarder",
 	"arenella-recruiter-account-company-name": "Nom de l'entreprise",
 	"arenella-recruiter-account-detail-invoice-warn": "Avertissement",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Il y a une facture impayée. L'accès au système est temporairement suspendu jusqu'au paiement de la facture.",
@@ -353,7 +352,7 @@
 	"arenella-recruiter-listing-btn-add-job": "Ajouter un travail",
 	"arenella-recruiter-listing-btn-back": "Retourner",
 	"arenella-recruiter-listing-btn-confirm": "Confirmer",
-	"arenella-recruiter-listing-btn-create-from-spec": "Créer à partir des spécifications",
+	"arenella-recruiter-listing-btn-create-from-spec": "Créer des spéc",
 	"arenella-recruiter-listing-btn-delete": "Supprimer",
 	"arenella-recruiter-listing-btn-edit": "Modifier",
 	"arenella-recruiter-listing-btn-publicity": "Publicité",
@@ -478,6 +477,7 @@
 	"arenella-recruiter-prof-box-contact-desc2": "Vous pouvez afficher une copie de votre message et toutes les réponses dans votre boîte de réception",
 	"arenella-recruiter-prof-box-contact-failed": "Échec de l'envoi du message",
 	"arenella-recruiter-prof-box-contact-title": "Envoyer le message",
+	"arenella-recruiter-prof-box-contact-titleititle": "Titre",
 	"arenella-recruiter-prof-btn-back": "Retourner",
 	"arenella-recruiter-prof-btn-create": "Créer un profil",
 	"arenella-recruiter-prof-btn-edit": "Editer le profil",
@@ -500,7 +500,7 @@
 	"arenella-recruiter-prof-vis-public": "Visible au public",
 	"arenella-recruiter-prof-vis-rec": "Visible pour les recruteurs",
 	"arenella-recruiter-signup-agree": "En vous inscrivant, vous acceptez que vos informations soient stockées dans le système.\nVos données ne seront pas partagées avec des tiers.\nVotre activité sur le site sera stockée en interne pour fournir des statistiques et\npour améliorer votre expérience utilisateur.",
-	"arenella-recruiter-signup-btn-start-trial": "Commencer l'essai gratuit",
+	"arenella-recruiter-signup-btn-start-trial": "Commencer l'essai",
 	"arenella-recruiter-signup-companyname": "Nom de l'entreprise",
 	"arenella-recruiter-signup-email": "E-mail",
 	"arenella-recruiter-signup-en": "Anglais",
@@ -576,6 +576,7 @@
 	"arenella-suggestions-box-alert-btn-save": "Garde",
 	"arenella-suggestions-box-alert-failure": "Malheureusement, il n'a pas été possible d'envoyer la réponse pour le moment.",
 	"arenella-suggestions-box-alert-hdr": "Créer une alerte",
+	"arenella-suggestions-box-alert-name": "Nom de l'alerte",
 	"arenella-suggestions-box-alert-success-1": "Votre alerte de recherche de candidat a été créée avec succès. Vous recevrez désormais des alertes lorsque les candidats correspondants seront téléchargés.",
 	"arenella-suggestions-box-alert-success-2": "Vous pouvez gérer les alertes dans l'écran « Gérer les alertes de recherche ».",
 	"arenella-suggestions-box-alert-text": "Veuillez ajouter les filtres requis avant de créer votre alerte",
@@ -591,7 +592,7 @@
 	"arenella-suggestions-box-spec-text": "Coller le texte",
 	"arenella-suggestions-btn-copy": "Copie",
 	"arenella-suggestions-btn-create-alert": "Créer une alerte",
-	"arenella-suggestions-btn-filter-by-spec": "Filtrer par spécification de travail",
+	"arenella-suggestions-btn-filter-by-spec": "Filtrer par spéc",
 	"arenella-suggestions-btn-manage-alert": "Gérer les alertes",
 	"arenella-suggestions-btn-my-candidates": "Mes candidats",
 	"arenella-suggestions-btn-reset": "recomposer",
@@ -613,6 +614,7 @@
 	"arenella-suggestions-profile-box-contact-title": "Titre",
 	"arenella-suggestions-profile-box-delete-hdr": "Confirmation de la suppression",
 	"arenella-suggestions-profile-box-delete-msg": "Ce profil sera supprimé et il ne sera plus possible d'accéder aux données associées",
+	"arenella-suggestions-profile-box-delete-msg-confirm": "Confirmer",
 	"arenella-suggestions-profile-box-msg-updated": "Mettre à jour",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Garde",
 	"arenella-suggestions-profile-box-notes-hdr": "Notes pour le candidat",
@@ -621,8 +623,9 @@
 	"arenella-suggestions-profile-btn-download-cv": "Télécharger CV",
 	"arenella-suggestions-profile-btn-edit": "Modifier",
 	"arenella-suggestions-profile-btn-notes": "Notes",
-	"arenella-suggestions-profile-btn-save": "Enregistrer le candidat",
-	"arenella-suggestions-profile-btn-unsave": "Annuler l'enregistrement du candidat",
+	"arenella-suggestions-profile-btn-save": "Enregistrer",
+	"arenella-suggestions-profile-btn-unsave": "Unsave",
+	"arenella-suggestions-profile-btn-view-cv": "Afficher CV",
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Précision de la langue",
 	"arenella-suggestions-profile-candidate-matching-skills": "Compétences correspondantes",
 	"arenella-suggestions-profile-candidate-missing-skills": "Compétences manquantes",
@@ -636,5 +639,139 @@
 	"arenella-suggestions-profile-introduction": "Introduction",
 	"arenella-suggestions-saved-candidate-btn-back": "retourner",
 	"arenella-suggestions-skills": "Compétences",
-	"arenella-suggestions-to": "À"
+	"arenella-suggestions-to": "À",
+	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
+	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
+	"create-candidate-failure": "Impossible d'ajouter un candidat",
+	"create-candidate-success": "Vos coordonnées ont été téléchargées avec succès. Ils vont maintenant être examinés et ajoutés au système",
+	"failure": "Échec",
+	"func-ba": "Analyste d'affaires",
+	"func-csharp-dev": "Développeur C#",
+	"func-data-scientist": "Data Scientist",
+	"func-it-recruiter": "Recruteur informatique",
+	"func-it-security": "Sécurité informatique",
+	"func-java-dev": "Développeur Java",
+	"func-network-admin": "Administrateur réseau",
+	"func-pmo": "Chef de projet",
+	"func-scrum-master": "Scrum Master",
+	"func-software-architect": "Architecte logiciel",
+	"func-software-dev": "Développeur de logiciels",
+	"func-support": "Support Informatique",
+	"func-support-sdet": "SDET",
+	"func-tester": "Analyste de test",
+	"func-uiux": "UI/UX",
+	"func-web-dev": "Développeur Web",
+	"info-item-contract-rate": "Taux de contrat",
+	"info-item-days-onsite-fully-remote": "Entièrement distant",
+	"info-item-title-availability": "Disponibilité",
+	"info-item-title-available-from": "Disponible",
+	"info-item-title-city": "Ville",
+	"info-item-title-contract": "Contrat ",
+	"info-item-title-contract-type": "Type de contrat",
+	"info-item-title-country": "Pays",
+	"info-item-title-languages": "Langues",
+	"info-item-title-location": "Lieu",
+	"info-item-title-location-per": " par",
+	"info-item-title-max-days-on-site": "Nombre maximum de jours sur place",
+	"info-item-title-per": " par ",
+	"info-item-title-perm-rate": "Taux de perm",
+	"info-item-title-permanent": "Perm",
+	"info-item-title-rate": "Tarif: ",
+	"info-item-title-to": " a ",
+	"info-item-title-years-experience": "Années d'expérience",
+	"login-user-invalid-login": "Tentative de connexion invalide",
+	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
+	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
+	"mp-left-failure-failed-to-persits-new-open-position": "Échec de la persistance de la nouvelle position ouverte",
+	"mp-left-mnu-city": "Ville",
+	"mp-left-mnu-company": "Entreprise",
+	"mp-left-mnu-condistons": "Conditions",
+	"mp-left-mnu-contract-type": "Type de contrat",
+	"mp-left-mnu-country": "Pays",
+	"mp-left-mnu-location": "Emplacement",
+	"mp-left-mnu-name": "Prénom",
+	"mp-left-mnu-rate-salsary": "Tarif/Salaire",
+	"mp-left-mnu-renumerationo": "Rémunération",
+	"mp-left-mnu-requested-by": "Demandé par",
+	"mp-left-mnu-requested-skills": "Compétences",
+	"new-candidate-basic": "Basique",
+	"new-candidate-failure": "Impossible d'ajouter un candidat",
+	"new-candidate-failure-title": "Échec",
+	"new-candidate-no": "Non",
+	"new-candidate-success": "Candidat enregistré",
+	"new-candidate-success-title": "Succès",
+	"new-candidate-yes": "Oui",
+	"rec-prof-country-belgium": "Belgique",
+	"rec-prof-country-europe": "L'Europe",
+	"rec-prof-country-ireland": "Irlande",
+	"rec-prof-country-netherlands": "Pays-Bas",
+	"rec-prof-country-uk": "Royaume-Uni",
+	"rec-prof-country-world": "Monde",
+	"rec-prof-func-architect": "Architecte",
+	"rec-prof-func-busines-analyst": "BA",
+	"rec-prof-func-business-intelligence": "L'intelligence d'entreprise",
+	"rec-prof-func-cloud": "Cloud",
+	"rec-prof-func-cyber-security": "La cyber-sécurité",
+	"rec-prof-func-devops": "DevOps",
+	"rec-prof-func-dotnet": ".Net",
+	"rec-prof-func-java": "Java",
+	"rec-prof-func-networks": "Les réseaux",
+	"rec-prof-func-project-management": "Gestion de projet",
+	"rec-prof-func-rec2rec": "Rec2Rec",
+	"rec-prof-func-support-helpdesk": "Assistance/Helpdesk",
+	"rec-prof-func-testing": "Tests d'assurance qualité",
+	"rec-prof-func-ui-ux": "UI/UX",
+	"rec-prof-func-web": "Web",
+	"rec-prof-info-item-company": "Entreprise",
+	"rec-prof-info-item-type": "Type",
+	"rec-prof-info-item-years-exp": "Années d'expérience",
+	"rec-prof-lang-dutch": "Néerlandais",
+	"rec-prof-lang-english": "Anglais",
+	"rec-prof-lang-french": "Français",
+	"rec-prof-sector-automitive": "Automobile",
+	"rec-prof-sector-cyber-intelligence": "Cyber-renseignement",
+	"rec-prof-sector-eu-institutions": "Institutions de l'UE",
+	"rec-prof-sector-fintech": "Fintech",
+	"rec-prof-sector-gaming": "Jeu",
+	"rec-prof-sector-government": "Gouvernement",
+	"rec-prof-sector-logistice": "Logistique",
+	"rec-prof-sector-police-and-defence": "Police et Défense",
+	"rec-prof-type-freelance-contract": "Indépendant/Contrat",
+	"rec-prof-type-permanent-payroll": "Permanent/Paie",
+	"register-recruiter-failure": "Malheureusement, il y a eu un problème. Veuillez envoyer un e-mail à kparkings@gmail.com directement pour votre compte",
+	"register-recruiter-failure-title": "Échec",
+	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
+	"register-recruiter-success-title": "Succès",
+	"static-contract-type-both": "Contrat/Perm",
+	"static-contract-type-contract": "Contrat",
+	"static-contract-type-perm": "Perm",
+	"static-country-be": "Belgique",
+	"static-country-eu": "UE",
+	"static-country-ir": "Irlande",
+	"static-country-nl": "Les Pays-Bas",
+	"static-country-uk": "Royaume Uni",
+	"static-country-world": "Monde",
+	"static-func-architecture": "Architecture",
+	"static-func-ba": "BA",
+	"static-func-bi": "Cloud",
+	"static-func-cloud": "Cloud",
+	"static-func-devops": "Devops",
+	"static-func-dotnet": ".Net",
+	"static-func-java": "Java",
+	"static-func-networkd": "Les réseaux",
+	"static-func-pmo": "PMO",
+	"static-func-recruitment": "Recrutement",
+	"static-func-security": "Sécurité informatique",
+	"static-func-supporrty": "Support Informatique",
+	"static-func-testing": "Testing",
+	"static-func-uiux": "UI/UX",
+	"static-func-web": "Web",
+	"static-lang-dutch": "Néerlandais",
+	"static-lang-english": "Anglais",
+	"static-lang-french": "Français",
+	"success": "Succès",
+	"suggestions-lang-dutch": "Néerlandais",
+	"suggestions-lang-english": "Anglais",
+	"suggestions-lang-french": "Français",
+	"suggestions-lang-na": "NA"
 }
