--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -121,7 +121,7 @@
 	"arenella-email-attachments": "Allegati",
 	"arenella-email-btn-reply": "Rispondere",
 	"arenella-email-btn-undread": "Segna da leggere",
-	"arenella-email-btn-unread": "Segna come da leggere",
+	"arenella-email-btn-unread": "Segna da leggere",
 	"arenella-email-from": "Da",
 	"arenella-email-msg-reply-failed": "Purtroppo non è stato possibile inviare la risposta in questo momento.",
 	"arenella-email-msg-reply-sent": "La risposta è stata inviata.",
@@ -170,7 +170,6 @@
 	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
 	"arenella-home-title": "Welcome to Arenella-ICT",
 	"arenella-infobox-contact": "Contatto",
-	"arenella-infobox-person": "persona",
 	"arenella-listing-btn-back": "Indietro",
 	"arenella-listing-btn-create": "Crea avviso",
 	"arenella-listing-btn-publicity": "Pubblicità",
@@ -230,7 +229,7 @@
 	"arenella-new-candidate-3": "3",
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
-	"arenella-new-candidate-available-from": "Disponibile da",
+	"arenella-new-candidate-available-from": "Disponibile",
 	"arenella-new-candidate-belgium": "Belgio",
 	"arenella-new-candidate-btn-add": "Aggiungere",
 	"arenella-new-candidate-btn-back": "Indietro",
@@ -249,7 +248,7 @@
 	"arenella-new-candidate-first-name": "Nome",
 	"arenella-new-candidate-firstname": "Nome",
 	"arenella-new-candidate-french": "Francese",
-	"arenella-new-candidate-from": "A",
+	"arenella-new-candidate-from": "A partire dal",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
 	"arenella-new-candidate-function-group": "Gruppo di funzioni",
 	"arenella-new-candidate-gbp": "GBP",
@@ -278,7 +277,7 @@
 	"arenella-newsfeed-view-profile": "Vedi profilo",
 	"arenella-recruiter-account-btn-cancel": "Annulla",
 	"arenella-recruiter-account-btn-edit": "Modifica i dettagli",
-	"arenella-recruiter-account-btn-save": "Salvare le modifiche",
+	"arenella-recruiter-account-btn-save": "Salvare",
 	"arenella-recruiter-account-company-name": "Nome della ditta",
 	"arenella-recruiter-account-detail-invoice-warn": "Avvertimento",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "C'è una fattura in sospeso. L'accesso al sistema è temporaneamente sospeso fino al pagamento della fattura.",
@@ -478,6 +477,7 @@
 	"arenella-recruiter-prof-box-contact-desc2": "Puoi visualizzare una copia del tuo messaggio e le eventuali risposte nella tua casella di posta",
 	"arenella-recruiter-prof-box-contact-failed": "Impossibile inviare il messaggio",
 	"arenella-recruiter-prof-box-contact-title": "Invia messaggio",
+	"arenella-recruiter-prof-box-contact-titleititle": "Titolo",
 	"arenella-recruiter-prof-btn-back": "Indietro",
 	"arenella-recruiter-prof-btn-create": "Crea un profilo",
 	"arenella-recruiter-prof-btn-edit": "Modifica Profilo",
@@ -576,6 +576,7 @@
 	"arenella-suggestions-box-alert-btn-save": "salvo",
 	"arenella-suggestions-box-alert-failure": "Purtroppo non è stato possibile inviare la risposta in questo momento.",
 	"arenella-suggestions-box-alert-hdr": "Crea avviso e-mail",
+	"arenella-suggestions-box-alert-name": "Nome avviso",
 	"arenella-suggestions-box-alert-success-1": "Il tuo avviso di ricerca candidati è stato creato correttamente. Ora riceverai avvisi quando verranno caricati i candidati corrispondenti.",
 	"arenella-suggestions-box-alert-success-2": "Puoi gestire gli avvisi nella schermata \"Gestisci avvisi di ricerca\".",
 	"arenella-suggestions-box-alert-text": "Aggiungi i filtri richiesti prima di creare il tuo avviso",
@@ -591,7 +592,7 @@
 	"arenella-suggestions-box-spec-text": "Incolla testo",
 	"arenella-suggestions-btn-copy": "copia",
 	"arenella-suggestions-btn-create-alert": "Crea avviso",
-	"arenella-suggestions-btn-filter-by-spec": "Filtra per specifiche di lavoro",
+	"arenella-suggestions-btn-filter-by-spec": "Filtra per spec",
 	"arenella-suggestions-btn-manage-alert": "Gestire gli avvisi",
 	"arenella-suggestions-btn-my-candidates": "I miei candidati",
 	"arenella-suggestions-btn-reset": "Ripristina",
@@ -613,6 +614,7 @@
 	"arenella-suggestions-profile-box-contact-title": "Titolo",
 	"arenella-suggestions-profile-box-delete-hdr": "Conferma cancellazione",
 	"arenella-suggestions-profile-box-delete-msg": "Questo profilo verrà cancellato e non sarà più possibile accedere ai dati associati",
+	"arenella-suggestions-profile-box-delete-msg-confirm": "Confermare",
 	"arenella-suggestions-profile-box-msg-updated": "Aggiornare",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Salvo",
 	"arenella-suggestions-profile-box-notes-hdr": "Note per il candidato",
@@ -622,7 +624,8 @@
 	"arenella-suggestions-profile-btn-edit": "Modificare",
 	"arenella-suggestions-profile-btn-notes": "Appunti",
 	"arenella-suggestions-profile-btn-save": "Salva candidato",
-	"arenella-suggestions-profile-btn-unsave": "Annulla salvataggio candidato",
+	"arenella-suggestions-profile-btn-unsave": "Unsave",
+	"arenella-suggestions-profile-btn-view-cv": "Visualizza CV",
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Precisione del linguaggio",
 	"arenella-suggestions-profile-candidate-matching-skills": "Abilità corrispondenti",
 	"arenella-suggestions-profile-candidate-missing-skills": "Competenze mancanti",
@@ -636,5 +639,139 @@
 	"arenella-suggestions-profile-introduction": "Introduzione",
 	"arenella-suggestions-saved-candidate-btn-back": "Indietro",
 	"arenella-suggestions-skills": "Competenze",
-	"arenella-suggestions-to": "A"
+	"arenella-suggestions-to": "A",
+	"create-candidate--profile-image": "Si è verificato un problema con l'immagine del profilo",
+	"create-candidate-cv-format": "Il CV deve essere Word o PDF e inferiore a 1 MB",
+	"create-candidate-failure": "Impossibile aggiungere il candidato",
+	"create-candidate-success": "I tuoi dati sono stati caricati con successo. Ora verranno esaminati e aggiunti al sistema",
+	"failure": "Fallimento",
+	"func-ba": "Analista di affari",
+	"func-csharp-dev": "Sviluppatore C#",
+	"func-data-scientist": "Data Scientist",
+	"func-it-recruiter": "Reclutatore informatico",
+	"func-it-security": "Sicurezza informatica",
+	"func-java-dev": "Sviluppatore Java",
+	"func-network-admin": "Amministratore di rete",
+	"func-pmo": "Responsabile del progetto",
+	"func-scrum-master": "Scrum Master",
+	"func-software-architect": "Architetto del software",
+	"func-software-dev": "Sviluppatore di software",
+	"func-support": "Supporto IT",
+	"func-support-sdet": "SDET",
+	"func-tester": "Analista di Test",
+	"func-uiux": "UI/UX",
+	"func-web-dev": "Sviluppatore Web",
+	"info-item-contract-rate": "Contratto Tariffo",
+	"info-item-days-onsite-fully-remote": "Completamente remoto",
+	"info-item-title-availability": "Disponibilità",
+	"info-item-title-available-from": "Disponibile",
+	"info-item-title-city": "Citta",
+	"info-item-title-contract": "Contratto",
+	"info-item-title-contract-type": "Tipo di contratto",
+	"info-item-title-country": "Paese",
+	"info-item-title-languages": "Lingue",
+	"info-item-title-location": "Luogo",
+	"info-item-title-location-per": " al",
+	"info-item-title-max-days-on-site": "Numero massimo di giorni sul posto",
+	"info-item-title-per": " al ",
+	"info-item-title-perm-rate": "Perm Tariffo",
+	"info-item-title-permanent": "Perm",
+	"info-item-title-rate": "Tariffa: ",
+	"info-item-title-to": " al ",
+	"info-item-title-years-experience": "Anni di esperienza",
+	"login-user-invalid-login": "Tentativo di accesso non valido",
+	"login-user-unable-to-send-email": "Impossibile inviare e-mail. E-mail forse sconosciuta.",
+	"mp-failure-failed-to-update-open-position": "Impossibile aggiornare la posizione aperta",
+	"mp-left-failure-failed-to-persits-new-open-position": "Impossibile mantenere la nuova posizione aperta",
+	"mp-left-mnu-city": "Città",
+	"mp-left-mnu-company": "Azienda",
+	"mp-left-mnu-condistons": "Condizioni",
+	"mp-left-mnu-contract-type": "Tipo di contratto",
+	"mp-left-mnu-country": "Nazione",
+	"mp-left-mnu-location": "Posizione",
+	"mp-left-mnu-name": "Nome",
+	"mp-left-mnu-rate-salsary": "Tariffa/stipendio",
+	"mp-left-mnu-renumerationo": "Renumerazione",
+	"mp-left-mnu-requested-by": "Richiesto da",
+	"mp-left-mnu-requested-skills": "Abilita",
+	"new-candidate-basic": "Base",
+	"new-candidate-failure": "Impossibile aggiungere il candidato",
+	"new-candidate-failure-title": "Fallimento",
+	"new-candidate-no": "No",
+	"new-candidate-success": "Candidato salvato",
+	"new-candidate-success-title": "Successo",
+	"new-candidate-yes": "SÌ",
+	"rec-prof-country-belgium": "Belgio",
+	"rec-prof-country-europe": "Europa",
+	"rec-prof-country-ireland": "Irlanda",
+	"rec-prof-country-netherlands": "Olanda",
+	"rec-prof-country-uk": "Regno Unito",
+	"rec-prof-country-world": "Mondo",
+	"rec-prof-func-architect": "Architetto",
+	"rec-prof-func-busines-analyst": "BA",
+	"rec-prof-func-business-intelligence": "Business Intelligenza",
+	"rec-prof-func-cloud": "Cloud",
+	"rec-prof-func-cyber-security": "Sicurezza informatica",
+	"rec-prof-func-devops": "DevOps",
+	"rec-prof-func-dotnet": ".Net",
+	"rec-prof-func-java": "Java",
+	"rec-prof-func-networks": "Reti",
+	"rec-prof-func-project-management": "Gestione di progetto",
+	"rec-prof-func-rec2rec": "Rec2Rec",
+	"rec-prof-func-support-helpdesk": "Supporto/Helpdesk",
+	"rec-prof-func-testing": "Test di garanzia della qualità",
+	"rec-prof-func-ui-ux": "UI/UX",
+	"rec-prof-func-web": "Web",
+	"rec-prof-info-item-company": "Azienda",
+	"rec-prof-info-item-type": "Genere",
+	"rec-prof-info-item-years-exp": "Anni di esperienza",
+	"rec-prof-lang-dutch": "Olandese",
+	"rec-prof-lang-english": "Inglese",
+	"rec-prof-lang-french": "Francese",
+	"rec-prof-sector-automitive": "Settore automobilistico",
+	"rec-prof-sector-cyber-intelligence": "Intelligenza informatica",
+	"rec-prof-sector-eu-institutions": "Istituzioni dell'UE",
+	"rec-prof-sector-fintech": "Fintech",
+	"rec-prof-sector-gaming": "Giochi",
+	"rec-prof-sector-government": "Governo",
+	"rec-prof-sector-logistice": "La logistica",
+	"rec-prof-sector-police-and-defence": "Polizia e Difesa",
+	"rec-prof-type-freelance-contract": "Libero professionista/Contratto",
+	"rec-prof-type-permanent-payroll": "Permanente/Libro paga",
+	"register-recruiter-failure": "Purtroppo si è verificato un problema. Invia un'e-mail a kparkings@gmail.com direttamente per il tuo account",
+	"register-recruiter-failure-title": "Fallimento",
+	"register-recruiter-success": "La tua richiesta è stata inviata. Una volta accettato, verrà inviata un'e-mail con i dati di accesso.",
+	"register-recruiter-success-title": "Successo",
+	"static-contract-type-both": "Contratto/Perm",
+	"static-contract-type-contract": "Contrarre",
+	"static-contract-type-perm": "Perm",
+	"static-country-be": "Belgio",
+	"static-country-eu": "UE",
+	"static-country-ir": "Irlanda",
+	"static-country-nl": "Paesi Bassi",
+	"static-country-uk": "Regno Unito",
+	"static-country-world": "Mondo",
+	"static-func-architecture": "Architettura",
+	"static-func-ba": "BA",
+	"static-func-bi": "Cloud",
+	"static-func-cloud": "Cloud",
+	"static-func-devops": "Devops",
+	"static-func-dotnet": ".Net",
+	"static-func-java": "Java",
+	"static-func-networkd": "Reti",
+	"static-func-pmo": "PMO",
+	"static-func-recruitment": "Reclutamento",
+	"static-func-security": "Sicurezza informatica",
+	"static-func-supporrty": "Supporto IT",
+	"static-func-testing": "Testing",
+	"static-func-uiux": "UI/UX",
+	"static-func-web": "Web",
+	"static-lang-dutch": "Olandese",
+	"static-lang-english": "Inglese",
+	"static-lang-french": "Francese",
+	"success": "Successo",
+	"suggestions-lang-dutch": "Olandese",
+	"suggestions-lang-english": "Inglese",
+	"suggestions-lang-french": "Francese",
+	"suggestions-lang-na": "NA"
 }
