--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -121,7 +121,7 @@
 	"arenella-email-attachments": "Bijlagen",
 	"arenella-email-btn-reply": "Antwoord",
 	"arenella-email-btn-undread": "Markeer ongelezen",
-	"arenella-email-btn-unread": "Markeer als ongelezen",
+	"arenella-email-btn-unread": "Markeer ongelezen",
 	"arenella-email-from": "Van",
 	"arenella-email-msg-reply-failed": "Helaas was het op dit moment niet mogelijk om het antwoord te verzenden.",
 	"arenella-email-msg-reply-sent": "Het antwoord is verzonden.",
@@ -170,7 +170,6 @@
 	"arenella-home-sub-title": "CV-database voor IT-kandidaten - IT-vacaturebank - IT-marktplaats",
 	"arenella-home-title": "Welkom bij Arenella-ICT",
 	"arenella-infobox-contact": "persoon",
-	"arenella-infobox-person": "persoon",
 	"arenella-listing-btn-back": "Terug",
 	"arenella-listing-btn-create": "Maak Alert",
 	"arenella-listing-btn-publicity": "Publiciteit",
@@ -230,7 +229,7 @@
 	"arenella-new-candidate-3": "3",
 	"arenella-new-candidate-4": "4",
 	"arenella-new-candidate-5": "5",
-	"arenella-new-candidate-available-from": "Beschikbaar van",
+	"arenella-new-candidate-available-from": "Beschikbaar",
 	"arenella-new-candidate-belgium": "België",
 	"arenella-new-candidate-btn-add": "Toevoegen",
 	"arenella-new-candidate-btn-back": "Terug",
@@ -249,7 +248,7 @@
 	"arenella-new-candidate-first-name": "Voornaam",
 	"arenella-new-candidate-firstname": "Voornaam",
 	"arenella-new-candidate-french": "Frans",
-	"arenella-new-candidate-from": "Naar",
+	"arenella-new-candidate-from": "Van",
 	"arenella-new-candidate-fully-remote": "Volledig op afstand",
 	"arenella-new-candidate-function-group": "Functiegroep",
 	"arenella-new-candidate-gbp": "GBP",
@@ -278,7 +277,7 @@
 	"arenella-newsfeed-view-profile": "Bekijk profiel",
 	"arenella-recruiter-account-btn-cancel": "Annuleren",
 	"arenella-recruiter-account-btn-edit": "Details bewerken",
-	"arenella-recruiter-account-btn-save": "Wijzigingen opslaan",
+	"arenella-recruiter-account-btn-save": "opslaan",
 	"arenella-recruiter-account-company-name": "Bedrijfsnaam",
 	"arenella-recruiter-account-detail-invoice-warn": "Waarschuwing",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Er is een openstaande factuur. De toegang tot het systeem wordt tijdelijk opgeschort totdat de factuur is betaald.",
@@ -353,7 +352,7 @@
 	"arenella-recruiter-listing-btn-add-job": "Taak toevoegen",
 	"arenella-recruiter-listing-btn-back": "Terug",
 	"arenella-recruiter-listing-btn-confirm": "Bevestigen",
-	"arenella-recruiter-listing-btn-create-from-spec": "Creëer op basis van specificatie",
+	"arenella-recruiter-listing-btn-create-from-spec": "Creëer van spec",
 	"arenella-recruiter-listing-btn-delete": "Verwijderen",
 	"arenella-recruiter-listing-btn-edit": "Bewerking",
 	"arenella-recruiter-listing-btn-publicity": "Publiciteit",
@@ -478,6 +477,7 @@
 	"arenella-recruiter-prof-box-contact-desc2": "U kunt een kopie van uw bericht en eventuele antwoorden bekijken in uw inbox",
 	"arenella-recruiter-prof-box-contact-failed": "Kan bericht niet verzenden",
 	"arenella-recruiter-prof-box-contact-title": "Bericht versturen",
+	"arenella-recruiter-prof-box-contact-titleititle": "Titel",
 	"arenella-recruiter-prof-btn-back": "Terug",
 	"arenella-recruiter-prof-btn-create": "Maak een profiel aan",
 	"arenella-recruiter-prof-btn-edit": "Bewerk profiel",
@@ -576,6 +576,7 @@
 	"arenella-suggestions-box-alert-btn-save": "Sla op",
 	"arenella-suggestions-box-alert-failure": "Helaas was het op dit moment niet mogelijk om het antwoord te verzenden.",
 	"arenella-suggestions-box-alert-hdr": "Maak Alert",
+	"arenella-suggestions-box-alert-name": "Alert Naam",
 	"arenella-suggestions-box-alert-success-1": "Uw Candidate Search Alert is succesvol aangemaakt. U ontvangt nu waarschuwingen wanneer er matchende kandidaten worden geüpload.",
 	"arenella-suggestions-box-alert-success-2": "U kunt waarschuwingen beheren in het scherm 'Zoekwaarschuwingen beheren'.",
 	"arenella-suggestions-box-alert-text": "Voeg de vereiste filters toe voordat u uw melding maakt",
@@ -591,7 +592,7 @@
 	"arenella-suggestions-box-spec-text": "Tekst plakken",
 	"arenella-suggestions-btn-copy": "Kopiëren",
 	"arenella-suggestions-btn-create-alert": "Maak Alert",
-	"arenella-suggestions-btn-filter-by-spec": "Filter op taakspecificatie",
+	"arenella-suggestions-btn-filter-by-spec": "Filter op spec",
 	"arenella-suggestions-btn-manage-alert": "Beheer alerts",
 	"arenella-suggestions-btn-my-candidates": "Mijn kandidaten",
 	"arenella-suggestions-btn-reset": "Opnieuw instellen",
@@ -613,6 +614,7 @@
 	"arenella-suggestions-profile-box-contact-title": "Titel",
 	"arenella-suggestions-profile-box-delete-hdr": "Bevestig verwijderen",
 	"arenella-suggestions-profile-box-delete-msg": "Dit profiel wordt verwijderd en het is niet meer mogelijk om bij de bijbehorende gegevens te komen",
+	"arenella-suggestions-profile-box-delete-msg-confirm": "Bevestigen",
 	"arenella-suggestions-profile-box-msg-updated": "Bijwerken",
 	"arenella-suggestions-profile-box-notes-btn-saved": "Sla op",
 	"arenella-suggestions-profile-box-notes-hdr": "Opmerkingen voor kandidaat",
@@ -622,7 +624,8 @@
 	"arenella-suggestions-profile-btn-edit": "Bewerking",
 	"arenella-suggestions-profile-btn-notes": "Opmerkingen",
 	"arenella-suggestions-profile-btn-save": "Kandidaat opslaan",
-	"arenella-suggestions-profile-btn-unsave": "Kandidaat niet opslaan",
+	"arenella-suggestions-profile-btn-unsave": "Unsave",
+	"arenella-suggestions-profile-btn-view-cv": "CV weergeven",
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Taalnauwkeurigheid",
 	"arenella-suggestions-profile-candidate-matching-skills": "Matchende vaardigheden",
 	"arenella-suggestions-profile-candidate-missing-skills": "Ontbrekende vaardigheden",
@@ -636,5 +639,139 @@
 	"arenella-suggestions-profile-introduction": "Introductie",
 	"arenella-suggestions-saved-candidate-btn-back": "Terug",
 	"arenella-suggestions-skills": "Vaardigheden",
-	"arenella-suggestions-to": "Naar"
+	"arenella-suggestions-to": "Naar",
+	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
+	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
+	"create-candidate-failure": "Kan kandidaat niet toevoegen",
+	"create-candidate-success": "Uw gegevens zijn succesvol geüpload. Ze worden nu beoordeeld en aan het systeem toegevoegd",
+	"failure": "Fout",
+	"func-ba": "Bedrijfsanalist",
+	"func-csharp-dev": "C#-ontwikkelaar",
+	"func-data-scientist": "Data scientist",
+	"func-it-recruiter": "IT-recruiter",
+	"func-it-security": "IT beveiliging",
+	"func-java-dev": "Java-ontwikkelaar",
+	"func-network-admin": "Netwerkadministrator",
+	"func-pmo": "Projectleider",
+	"func-scrum-master": "Scrum Master",
+	"func-software-architect": "Software architect",
+	"func-software-dev": "Software ontwikkelaar",
+	"func-support": "IT ondersteuning",
+	"func-support-sdet": "SDET",
+	"func-tester": "Testanalist",
+	"func-uiux": "UI/UX",
+	"func-web-dev": "Webontwikkelaar",
+	"info-item-contract-rate": "Contract Tarief",
+	"info-item-days-onsite-fully-remote": "Volledig op afstand",
+	"info-item-title-availability": "Beschikbaarheid",
+	"info-item-title-available-from": "Beschikbaar",
+	"info-item-title-city": "Stad",
+	"info-item-title-contract": "Contract",
+	"info-item-title-contract-type": "Contract type",
+	"info-item-title-country": "Land",
+	"info-item-title-languages": "Talen",
+	"info-item-title-location": "Plaats",
+	"info-item-title-location-per": " Per",
+	"info-item-title-max-days-on-site": "Max. dagen op locatie",
+	"info-item-title-per": " per ",
+	"info-item-title-perm-rate": "Vaste Salaris",
+	"info-item-title-permanent": "Vaste",
+	"info-item-title-rate": "Tarief: ",
+	"info-item-title-to": " tot ",
+	"info-item-title-years-experience": "Jaren ervaring",
+	"login-user-invalid-login": "Ongeldige inlogpoging",
+	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
+	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
+	"mp-left-failure-failed-to-persits-new-open-position": "Kan nieuwe open positie niet volhouden",
+	"mp-left-mnu-city": "Stad",
+	"mp-left-mnu-company": "Bedrijf",
+	"mp-left-mnu-condistons": "Voorwaarden",
+	"mp-left-mnu-contract-type": "Contract type",
+	"mp-left-mnu-country": "Land",
+	"mp-left-mnu-location": "Plaats",
+	"mp-left-mnu-name": "Naam",
+	"mp-left-mnu-rate-salsary": "Tarief/Salaris",
+	"mp-left-mnu-renumerationo": "Vergoeding",
+	"mp-left-mnu-requested-by": "Aangevraagd door",
+	"mp-left-mnu-requested-skills": "Vaardigheden",
+	"new-candidate-basic": "Basis",
+	"new-candidate-failure": "Kan kandidaat niet toevoegen",
+	"new-candidate-failure-title": "Fout",
+	"new-candidate-no": "Nee",
+	"new-candidate-success": "Kandidaat opgeslagen",
+	"new-candidate-success-title": "Succes",
+	"new-candidate-yes": "Ja",
+	"rec-prof-country-belgium": "België",
+	"rec-prof-country-europe": "Europa",
+	"rec-prof-country-ireland": "Ierland",
+	"rec-prof-country-netherlands": "Nederland",
+	"rec-prof-country-uk": "UK",
+	"rec-prof-country-world": "Wereld",
+	"rec-prof-func-architect": "Architect",
+	"rec-prof-func-busines-analyst": "BA",
+	"rec-prof-func-business-intelligence": "Bedrijfsintelligentie",
+	"rec-prof-func-cloud": "Cloud",
+	"rec-prof-func-cyber-security": "Cyberbeveiliging",
+	"rec-prof-func-devops": "DevOps",
+	"rec-prof-func-dotnet": ".Net",
+	"rec-prof-func-java": "Java",
+	"rec-prof-func-networks": "Netwerken",
+	"rec-prof-func-project-management": "Project management",
+	"rec-prof-func-rec2rec": "Rec2Rec",
+	"rec-prof-func-support-helpdesk": "Ondersteuning/Helpdesk",
+	"rec-prof-func-testing": "QA-testen",
+	"rec-prof-func-ui-ux": "UI/UX",
+	"rec-prof-func-web": "Web",
+	"rec-prof-info-item-company": "Bedrijf",
+	"rec-prof-info-item-type": "Type",
+	"rec-prof-info-item-years-exp": "Jaren ervaring",
+	"rec-prof-lang-dutch": "Nederlands",
+	"rec-prof-lang-english": "Engels",
+	"rec-prof-lang-french": "Frans",
+	"rec-prof-sector-automitive": "Automobiel",
+	"rec-prof-sector-cyber-intelligence": "Cyber-intelligentie",
+	"rec-prof-sector-eu-institutions": "EU-instellingen",
+	"rec-prof-sector-fintech": "Fintech",
+	"rec-prof-sector-gaming": "Gamen",
+	"rec-prof-sector-government": "Regering",
+	"rec-prof-sector-logistice": "Logistiek",
+	"rec-prof-sector-police-and-defence": "Politie en Defensie",
+	"rec-prof-type-freelance-contract": "Freelance/contract",
+	"rec-prof-type-permanent-payroll": "Vast/salaris",
+	"register-recruiter-failure": "Helaas was er een probleem. Stuur een e-mail naar kparkings@gmail.com rechtstreeks voor uw account",
+	"register-recruiter-failure-title": "Fout",
+	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
+	"register-recruiter-success-title": "Succes",
+	"static-contract-type-both": "Contract/Vaste",
+	"static-contract-type-contract": "Contract",
+	"static-contract-type-perm": "Perm",
+	"static-country-be": "België",
+	"static-country-eu": "EU",
+	"static-country-ir": "Ierland",
+	"static-country-nl": "Nederland",
+	"static-country-uk": "Verenigd Koninkrijk",
+	"static-country-world": "Wereld",
+	"static-func-architecture": "Architectuur",
+	"static-func-ba": "BA",
+	"static-func-bi": "Cloud",
+	"static-func-cloud": "Cloud",
+	"static-func-devops": "Devops",
+	"static-func-dotnet": ".Net",
+	"static-func-java": "Java",
+	"static-func-networkd": "Networks",
+	"static-func-pmo": "PMO",
+	"static-func-recruitment": "Werving",
+	"static-func-security": "IT beveiliging",
+	"static-func-supporrty": "IT Support",
+	"static-func-testing": "Testing",
+	"static-func-uiux": "UI/UX",
+	"static-func-web": "Web",
+	"static-lang-dutch": "Nederlands",
+	"static-lang-english": "Engels",
+	"static-lang-french": "Frans",
+	"success": "Succes",
+	"suggestions-lang-dutch": "Nederlands",
+	"suggestions-lang-english": "Engels",
+	"suggestions-lang-french": "Frans",
+	"suggestions-lang-na": "NA"
 }
